--- a/src/APP/App.css
+++ b/src/APP/App.css
@@ -62,8 +62,39 @@ header {
 
 .nav__container {
     grid-area: nav;
-    border: 5px solid rgb(102, 35, 35);
-    background: rgb(201, 56, 11);
+    border-radius: 5px;
+    background: linear-gradient(90deg,#7603d4 15%, #3c3e58 100%);
+}
+
+.nav__container > ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+    gap: 30px;
+}
+
+.nav__container li {
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.nav__container li > a{
+    padding: 10px;
+    text-decoration: none;
+    font-family: "Mukta", sans-serif;
+    font-size: 1.3rem;
+    font-weight: bold;
+    cursor: pointer;
+    color: rgb(241, 216, 255);
+    transition: all 300ms;
+}
+
+.nav__container li > a:hover{
+    transform: scale(1.2, 1.2);
+    color:  rgb(147, 20, 221);
 }
 
 .movies__container {
