--- a/src/APP/App.css
+++ b/src/APP/App.css
@@ -9,13 +9,12 @@
 }
 
 body {
-    width: 100%;
-    height: auto;   
-    align-items: center;
     background: rgb(27, 6, 31)
 }
 
-#root {
+.app {
+    margin-top: 50px;
+    width: 100%;
     display: grid;
     justify-content: center;
     text-align: center;
@@ -62,7 +61,6 @@ header {
 
 .nav__container {
     grid-area: nav;
-    border-radius: 5px;
     background: linear-gradient(90deg,#7603d4 15%, #3c3e58 100%);
 }
 
@@ -99,8 +97,19 @@ header {
 
 .movies__container {
     grid-area: movies;
-    border: 5px solid rgb(9, 161, 67);
-    background: rgb(10, 156, 83);
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    background: linear-gradient(#6f2ba7 ,#59446d);
+}
+
+.movies__container-movie-item{
+    margin: 30px;
+    padding: 60px 25px 60px 25px;
+    background-color: #6201b1;
+    border-radius: 10px;
+    box-shadow: 0px 0px 6px #9b9a9b;
 }
 
 .aside__container {
