--- a/src/APP/App.css
+++ b/src/APP/App.css
@@ -73,7 +73,7 @@ header {
 }
 
 .nav__container li {
-    padding: 10px;
+    padding: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -83,8 +83,9 @@ header {
     padding: 10px;
     text-decoration: none;
     font-family: "Mukta", sans-serif;
-    font-size: 1.3rem;
+    font-size: 1rem;
     font-weight: bold;
+    font-family: "Sixtyfour", sans-serif;font-family: "Sixtyfour", sans-serif;
     cursor: pointer;
     color: rgb(241, 216, 255);
     transition: all 300ms;
@@ -106,7 +107,7 @@ header {
 
 .movies__container-movie-item{
     margin: 30px;
-    padding: 60px 25px 60px 25px;
+    padding: 60px 25px 20px 25px;
     background-color: #3d056b;
     border-radius: 10px;
     box-shadow: 0px 0px 6px #9b9a9b;
@@ -140,8 +141,56 @@ header {
 
 .aside__container {
     grid-area: aside;
-    border: 5px solid rgb(13, 74, 131);
-    background: rgb(190, 14, 196);
+    border-right: 2px solid #a634f3;
+    background: linear-gradient(#6f2ba7 ,#59446d);
+}
+
+.aside__container > div {
+    box-sizing: border-box;
+    width: 90%;
+    margin: 20px;
+    padding: 10px 20px 20px 20px;
+    border-radius: 3px;
+    box-shadow: 0px 0px 6px ;
+    color: white;
+}
+
+input[type="submit"], input[type="button"] {
+    width: 100px;
+    border: 0;
+    outline: 0;
+    padding: 10px;
+    border-radius: 3px;
+    margin: 15px 10px 5px 10px;
+    text-transform: capitalize;
+    font-size: 0.9rem;
+    font-weight: bold;
+    cursor: pointer;
+    color: rgb(1, 0, 2);
+    background: linear-gradient(160deg,#ffffff 0%,#550083 75%);
+}
+
+.aside__container input[type="text"],
+.aside__container input[type="text"],
+.aside__container textarea{
+    display: block;
+    width: 90%;
+    margin: 0 auto;
+    margin-top: 15px;
+    padding: 12px;
+    border-radius: 5px;
+    font-weight: bold;
+    background: #ead1ff;
+    color: #8400ff;
+    opacity: 4;
+    outline: 0;
+    border-color: transparent;
+}
+
+.aside__container > div > h3 {
+    font-size: 1.2rem;
+    font-weight: bold;
+    font-family: "Sixtyfour", sans-serif;font-family: "Sixtyfour", sans-serif;
 }
 
 footer {
