--- a/src/APP/App.css
+++ b/src/APP/App.css
@@ -107,14 +107,14 @@ header {
 
 .movies__container-movie-item{
     margin: 30px;
-    padding: 60px 25px 20px 25px;
+    padding: 70px 10px 20px 10px;
     background-color: #3d056b;
     border-radius: 10px;
     box-shadow: 0px 0px 6px #9b9a9b;
 }
 
 .movie__item-edit, .movie__item-delete {
-    width: 150px;
+    width: 100px;
     border: 0;
     outline: 0;
     padding: 10px;
@@ -195,7 +195,92 @@ input[type="submit"], input[type="button"] {
 
 footer {
     grid-area: footer;
-    border: 5px solid rgb(169, 8, 209);
-    background: rgb(230, 63, 21);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: "Sixtyfour", sans-serif;font-family: "Sixtyfour", sans-serif;
+    color: white;
+    border-top: 1px solid #a634f3;
+    background: linear-gradient(#6f2ba7 ,#59446d);
 }
-  
+
+footer > a {
+    padding: 10px;
+    text-decoration: none;
+    font-family: "Mukta", sans-serif;
+    font-size: 1rem;
+    font-weight: bold;
+    cursor: pointer;
+    color: white;
+    transition: all 300ms;
+}
+
+@media (max-width:769px) {
+    .movies__container {
+        flex-flow: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .movies__container-movie-item {
+        width: 90%;
+    }
+}
+
+@media (max-width: 426px) {
+    .movies__container-movie-item {
+        width: 80%;
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    .aside__container > div {
+        width: 80%;
+    }
+    header {
+        font-size: 0.8rem;
+    }
+    .nav__container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .nav__container > ul {
+        gap: 20px;
+    }
+    
+    .nav__container li {
+        padding: 0;
+    }
+    
+    .nav__container li > a{
+        padding: 1px;
+        font-size: 0.6rem;
+    }
+
+    .aside__container {
+        display: flex;
+        flex-flow: column;
+        align-items: center;
+    }
+
+    .aside__container > div  {
+        margin-left: 0;
+        margin-right: 0;
+    }    
+
+    .aside__container > div > h3 {
+        font-size: 0.8rem;
+    }    
+}
+
+@media (max-width: 376px) {
+    input[type="submit"], input[type="button"] {
+        width: 50px;
+        font-size: 0.6rem;
+    }
+
+    .aside__container input[type="text"]{
+        font-size: 0.6rem;
+    }
+}
