--- a/src/APP/App.css
+++ b/src/APP/App.css
@@ -106,6 +106,7 @@ header {
 }
 
 .movies__container-movie-item{
+    flex-grow: 1;
     margin: 30px;
     padding: 70px 10px 20px 10px;
     background-color: #3d056b;
@@ -271,7 +272,11 @@ footer > a {
 
     .aside__container > div > h3 {
         font-size: 0.8rem;
-    }    
+    }   
+    
+    footer {
+        font-size: 0.7rem;
+    }
 }
 
 @media (max-width: 376px) {
